<!--
  ~ Copyright (C) 2021 AnsdoShip Studio
  ~
  ~ This program is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with this program.  If not, see <http://www.gnu.org/licenses/>
  -->

<resources>
    <string name="app_name">Pixel Art Editor</string>
    <string name="paint">Paint</string>
    <string name="eraser">Eraser</string>
    <string name="fill">Fill</string>
    <string name="selection">Selection</string>
    <string name="colorize">Colorize</string>
    <string name="paint_width">Paint Width</string>
    <string name="graph">Graph</string>
    <string name="line">Line</string>
    <string name="circle">Circle</string>
    <string name="oval">Oval</string>
    <string name="square">Square</string>
    <string name="rectangle">Rectangle</string>
    <string name="palette">Palette</string>
    <string name="palette_name">Palette Name</string>
    <string name="undo">Undo</string>
    <string name="redo">Redo</string>
    <string name="settings">Settings</string>
    <string name="save">Save</string>
    <string name="load">Load</string>
    <string name="grid">Grid</string>
    <string name="show_grid">Show Grid</string>
    <string name="exit">Exit</string>
    <string name="rotate_left">Rotate Left</string>
    <string name="rotate_right">Rotate Right</string>
    <string name="flip_vertical">Flip Vertical</string>
    <string name="flip_horizontal">Flip Horizontal</string>
    <string name="replace">Replace</string>
    <string name="override">Override</string>
    <string name="menu">Menu</string>
    <string name="info">Info</string>
    <string name="help">Help</string>
    <string name="add">Add</string>
    <string name="adapter_item" translatable="false">Adapter Item</string>
    <string name="rename">Rename</string>
    <string name="delete">Delete</string>
    <string name="reset">Reset</string>
    <string name="back">Back</string>
    <string name="quality">Quality</string>
    <string name="background_palette">Background Palette</string>
    <string name="grid_palette">Grid Palette</string>
    <string name="builtin_palette">Builtin Palette</string>
    <string name="clear">Clear</string>
    <string name="done">Done</string>
    <string name="none">None</string>
    <string name="extension_palette" translatable="false">.palette</string>
    <string name="extension_image_png" translatable="false">.png</string>
    <string name="extension_image_jpg" translatable="false">.jpg</string>
    <string name="extension_image_bmp" translatable="false">.bmp</string>
    <string name="palette_name_default">Color Palette</string>
    <string name="image_name_default">Untitled</string>
    <string name="empty_palette">Empty Palette</string>
    <string name="copy_current_palette">Copy Current Palette</string>
    <string name="automatic_gradient">Automatic Gradient</string>
    <string name="load_image">Load Image</string>
    <string name="new_image">New Image</string>
    <string name="save_image">Save Image</string>
    <string name="paste_image">Paste Image</string>
    <string name="warning_reset_palette">Reset the palette ? This operation cannot be undone.</string>
    <string name="warning_delete_file">Delete the file ? This operation cannot be undone.</string>
    <string name="warning_same_name_file">There is a file of the same name. Override ? This operation cannot be undone.</string>
    <string name="warning_permission_denied">Unable to run Pixel Art Editor. Please grant storage permission.</string>
    <string name="image_width_default" translatable="false">32</string>
    <string name="image_height_default" translatable="false">32</string>
    <string name="width">Width</string>
    <string name="height">Height</string>
    <string name="warning_resize_image">The right-most and bottom-most pixels of the current image will be removed. Are you sure to do this ? This operation cannot be undone.</string>
    <string name="recenter">Recenter</string>
    <string name="left">Left</string>
    <string name="right">Right</string>
    <string name="top">Top</string>
    <string name="bottom">Bottom</string>
    <string name="center">Center</string>
    <string name="grid_width_default" translatable="false">1</string>
    <string name="grid_height_default" translatable="false">1</string>
    <string name="info_saved_successfully">Saved successfully !</string>
    <string name="error_image_too_large">Too large to load</string>
    <string name="error_app_crashed">Application crashed</string>
    <string name="help_content">-Move and zoom image with two fingers.
        \n\n-Most of widgets on the interface can be clicked, each corresponding to a function.
        \nFor example: Click the \"image name\" widget will show a dialog containing full name of the image.
        \n\n-Some tools have extensions that requires a second click.
        \nFor example: Click the color palette twice will open the color picker dialog.</string>
    <string name="copyright_info">Copyright © 2021 AnsdoShip Studio. All rights reserved.</string>
    <string name="open_source_info">Pixel Art Editor is open source. You can find the source code in GitHub.</string>
    <string name="author">Author: Tianscar</string>
    <string name="source_code_url" translatable="false">https://github.com/Ansdoship/PixelArtEditor</string>
    <string name="source_code_url_underlined" translatable="false"><u>https://github.com/Ansdoship/PixelArtEditor</u></string>
    <string name="copyright">Copyright</string>
    <string name="donate">Donate</string>
    <string name="alipay">Alipay</string>
</resources>