<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.MainActivity">
    <item
        android:id="@+id/item_undo"
        android:title="@string/undo"
        app:showAsAction="always" />
    <item
        android:id="@+id/item_redo"
        android:title="@string/redo"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/item_load"
        android:title="@string/load"
        app:showAsAction="never" />
    <item
        android:id="@+id/item_save"
        android:title="@string/save"
        app:showAsAction="never" />
    <item
        android:id="@+id/item_grid"
        android:title="@string/show_grid"
        app:showAsAction="never" />
    <item
        android:id="@+id/item_settings"
        android:title="@string/settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/item_exit"
        android:title="@string/exit" />
</menu>