<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="@dimen/cardview_default_radius">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageButton
            android:id="@+id/img_rotate_left"
            android:layout_width="?attr/actionBarSize"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/selectableItemBackground"
            android:contentDescription="@string/rotate_left"
            app:srcCompat="@drawable/ic_baseline_rotate_left_24" />

        <ImageButton
            android:id="@+id/img_rotate_right"
            android:layout_width="?attr/actionBarSize"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/selectableItemBackground"
            android:contentDescription="@string/rotate_right"
            app:srcCompat="@drawable/ic_baseline_rotate_right_24" />

        <ImageButton
            android:id="@+id/img_flip_horizontal"
            android:layout_width="?attr/actionBarSize"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/selectableItemBackground"
            android:contentDescription="@string/flip_horizontal"
            app:srcCompat="@drawable/ic_baseline_flip_horizontal_24" />

        <ImageButton
            android:id="@+id/img_flip_vertical"
            android:layout_width="?attr/actionBarSize"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/selectableItemBackground"
            android:contentDescription="@string/flip_vertical"
            app:srcCompat="@drawable/ic_baseline_flip_vertical_24" />

        <ImageButton
            android:id="@+id/img_done"
            android:layout_width="?attr/actionBarSize"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/selectableItemBackground"
            android:contentDescription="@string/done"
            app:srcCompat="@drawable/ic_baseline_done_24" />

        <ImageButton
            android:id="@+id/img_none"
            android:layout_width="?attr/actionBarSize"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/selectableItemBackground"
            android:contentDescription="@string/none"
            app:srcCompat="@drawable/ic_baseline_none_24" />

    </LinearLayout>

</androidx.cardview.widget.CardView>
