<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    app:cardCornerRadius="@dimen/cardview_default_radius">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageButton
            android:id="@+id/img_load"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/selectableItemBackground"
            android:contentDescription="@string/load"
            app:srcCompat="@drawable/ic_baseline_file_add_24" />

        <ImageButton
            android:id="@+id/img_save"
            android:layout_width="?attr/actionBarSize"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/selectableItemBackground"
            android:contentDescription="@string/save"
            app:srcCompat="@drawable/ic_baseline_save_24" />

        <ImageButton
            android:id="@+id/img_help"
            android:layout_width="?attr/actionBarSize"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/selectableItemBackground"
            android:contentDescription="@string/help"
            app:srcCompat="@drawable/ic_baseline_help_24" />

        <ImageButton
            android:id="@+id/img_info"
            android:layout_width="?attr/actionBarSize"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/selectableItemBackground"
            android:contentDescription="@string/info"
            app:srcCompat="@drawable/ic_baseline_info_24" />

        <ImageButton
            android:id="@+id/img_exit"
            android:layout_width="?attr/actionBarSize"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/selectableItemBackground"
            android:contentDescription="@string/exit"
            app:srcCompat="@drawable/ic_baseline_exit_to_app_24" />

    </LinearLayout>

</androidx.cardview.widget.CardView>
