<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/et_image_width"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:layout_toEndOf="@id/tv_image_width"
            android:layout_toRightOf="@id/tv_image_width"
            android:gravity="start|center_vertical"
            android:hint="@string/image_width_default"
            android:inputType="number"
            android:maxLength="256"
            android:paddingStart="16dp"
            android:paddingLeft="16dp"
            android:paddingEnd="16dp"
            android:paddingRight="16dp"
            android:singleLine="true"
            android:textColor="@android:color/black"
            android:textSize="14sp"
            tools:ignore="Autofill" />

        <TextView
            android:id="@+id/tv_image_width"
            android:layout_width="wrap_content"
            android:layout_height="?attr/actionBarSize"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:gravity="center"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:text="@string/width"
            android:textColor="@android:color/black"
            android:textSize="14sp"
            android:textStyle="bold" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <EditText
            android:id="@+id/et_image_height"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:layout_toEndOf="@id/tv_image_height"
            android:layout_toRightOf="@id/tv_image_height"
            android:gravity="start|center_vertical"
            android:hint="@string/image_height_default"
            android:inputType="number"
            android:maxLength="256"
            android:paddingStart="16dp"
            android:paddingLeft="16dp"
            android:paddingEnd="16dp"
            android:paddingRight="16dp"
            android:singleLine="true"
            android:textColor="@android:color/black"
            android:textSize="14sp"
            tools:ignore="Autofill" />

        <TextView
            android:id="@+id/tv_image_height"
            android:layout_width="wrap_content"
            android:layout_height="?attr/actionBarSize"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:gravity="center"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:text="@string/height"
            android:textColor="@android:color/black"
            android:textSize="14sp"
            android:textStyle="bold" />

    </RelativeLayout>

</LinearLayout>
