<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (C) 2021 AnsdoShip Studio
  ~
  ~ This program is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with this program.  If not, see <http://www.gnu.org/licenses/>
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <RadioGroup
        android:id="@+id/group_origin_flag_horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="20dp"
        android:paddingLeft="20dp"
        android:paddingTop="14dp"
        android:paddingEnd="20dp">

        <RadioButton
            android:id="@+id/btn_origin_flag_horizontal_left"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingStart="20dp"
            android:paddingLeft="20dp"
            android:paddingTop="10dp"
            android:paddingEnd="20dp"
            android:paddingRight="20dp"
            android:paddingBottom="10dp"
            android:text="@string/left"
            android:textSize="@dimen/text_size" />

        <RadioButton
            android:id="@+id/btn_origin_flag_horizontal_center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingStart="20dp"
            android:paddingLeft="20dp"
            android:paddingTop="10dp"
            android:paddingEnd="20dp"
            android:paddingRight="20dp"
            android:paddingBottom="10dp"
            android:text="@string/center"
            android:textSize="@dimen/text_size" />

        <RadioButton
            android:id="@+id/btn_origin_flag_horizontal_right"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingStart="20dp"
            android:paddingLeft="20dp"
            android:paddingTop="10dp"
            android:paddingEnd="20dp"
            android:paddingRight="20dp"
            android:paddingBottom="10dp"
            android:text="@string/right"
            android:textSize="@dimen/text_size" />
    </RadioGroup>

    <RadioGroup
        android:id="@+id/group_origin_flag_vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="20dp"
        android:paddingLeft="20dp"
        android:paddingEnd="20dp"
        android:paddingRight="20dp">

        <RadioButton
            android:id="@+id/btn_origin_flag_vertical_top"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingStart="20dp"
            android:paddingLeft="20dp"
            android:paddingTop="10dp"
            android:paddingEnd="20dp"
            android:paddingRight="20dp"
            android:paddingBottom="10dp"
            android:text="@string/top"
            android:textSize="@dimen/text_size" />

        <RadioButton
            android:id="@+id/btn_origin_flag_vertical_center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingStart="20dp"
            android:paddingLeft="20dp"
            android:paddingTop="10dp"
            android:paddingEnd="20dp"
            android:paddingRight="20dp"
            android:paddingBottom="10dp"
            android:text="@string/center"
            android:textSize="@dimen/text_size" />

        <RadioButton
            android:id="@+id/btn_origin_flag_vertical_bottom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingStart="20dp"
            android:paddingLeft="20dp"
            android:paddingTop="10dp"
            android:paddingEnd="20dp"
            android:paddingRight="20dp"
            android:paddingBottom="10dp"
            android:text="@string/bottom"
            android:textSize="@dimen/text_size" />
    </RadioGroup>
</LinearLayout>