<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (C) 2021 AnsdoShip Studio
  ~
  ~ This program is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with this program.  If not, see <http://www.gnu.org/licenses/>
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp">

        <EditText
            android:id="@+id/et_image_width"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:layout_toEndOf="@id/tv_image_width"
            android:layout_toRightOf="@id/tv_image_width"
            android:gravity="start|center_vertical"
            android:hint="@string/image_width_default"
            android:inputType="number"
            android:maxLength="256"
            android:paddingStart="16dp"
            android:paddingLeft="16dp"
            android:paddingEnd="16dp"
            android:paddingRight="16dp"
            android:singleLine="true"
            android:textColor="@android:color/black"
            tools:ignore="Autofill" />

        <TextView
            android:id="@+id/tv_image_width"
            android:layout_width="wrap_content"
            android:layout_height="?attr/actionBarSize"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:gravity="center"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:text="@string/width"
            android:textColor="@android:color/black"
            android:textSize="@dimen/text_size" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <EditText
            android:id="@+id/et_image_height"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:layout_toEndOf="@id/tv_image_height"
            android:layout_toRightOf="@id/tv_image_height"
            android:gravity="start|center_vertical"
            android:hint="@string/image_height_default"
            android:inputType="number"
            android:maxLength="256"
            android:paddingStart="16dp"
            android:paddingLeft="16dp"
            android:paddingEnd="16dp"
            android:paddingRight="16dp"
            android:singleLine="true"
            android:textColor="@android:color/black"
            tools:ignore="Autofill" />

        <TextView
            android:id="@+id/tv_image_height"
            android:layout_width="wrap_content"
            android:layout_height="?attr/actionBarSize"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:gravity="center"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:text="@string/height"
            android:textColor="@android:color/black"
            android:textSize="@dimen/text_size" />

    </RelativeLayout>

</LinearLayout>
