<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (C) 2021 AnsdoShip Studio
  ~
  ~ This program is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with this program.  If not, see <http://www.gnu.org/licenses/>
  -->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:id="@+id/llayout_adapter_palette"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/img_adapter_reset"
            android:layout_width="?attr/actionBarSize"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/selectableItemBackground"
            android:contentDescription="@string/reset"
            app:srcCompat="@drawable/ic_baseline_reset_24" />

        <ImageButton
            android:id="@+id/img_adapter_rename"
            android:layout_width="?attr/actionBarSize"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/selectableItemBackground"
            android:contentDescription="@string/rename"
            app:srcCompat="@drawable/ic_baseline_edit_24" />

        <ImageButton
            android:id="@+id/img_adapter_delete"
            android:layout_width="?attr/actionBarSize"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/selectableItemBackground"
            android:contentDescription="@string/delete"
            app:srcCompat="@drawable/ic_baseline_delete_24" />
    </LinearLayout>

    <TextView
        android:id="@+id/tv_adapter_palette"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_toStartOf="@id/llayout_adapter_palette"
        android:layout_toLeftOf="@id/llayout_adapter_palette"
        android:background="?attr/selectableItemBackground"
        android:drawablePadding="8dp"
        android:ellipsize="start"
        android:gravity="start|center_vertical"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:singleLine="true"
        android:textColor="@android:color/black"
        android:textSize="@dimen/text_size"
        app:drawableLeftCompat="@drawable/ic_baseline_palette_24" />

</RelativeLayout>
